--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pandas>=2.2.3",
     "plotly>=5.24.1",
     "pydantic-ai-slim>=0.7.5",
+    "python-dotenv>=1.2.1",
     "quandl>=3.7.0",
     "streamlit>=1.41.1",
     "tavily-python>=0.5.0",
