--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "openai>=1.59.6",
     "pandas>=2.2.3",
     "plotly>=5.24.1",
+    "psycopg2>=2.9.11",
     "pydantic-ai-slim>=0.7.5",
     "python-dotenv>=1.2.1",
     "quandl>=3.7.0",
